fixed paragraph overflow bug

--- a/src/components/Experience.css
+++ b/src/components/Experience.css
@@ -5,7 +5,9 @@
     --left-padding: 20px;
 }
 
-.ExperienceView {
+.ExperienceItem {
+    display: flex;
+    flex-direction: row;
     padding-top: var(--vertical-padding);
     padding-bottom: var(--vertical-padding);
     margin-top: 2px;
@@ -24,11 +26,6 @@
     text-align: left;
     margin-left: var(--left-padding);
     color: var(--secondary-font-color);
-}
-
-.ExperienceItem {
-    display: grid;
-    grid-template-columns: max-content max-content;
 }
 
 .Date-Column {
@@ -53,7 +50,8 @@
 }
 
 .Description {
-    font-size: 14px;
+    font-size: 16px;
     text-align: left;
+    margin-top: 10px;
     color: var(--secondary-font-color);
 }
